; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_checkout.c_checkout_lookup_head_tree.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_checkout.c_checkout_lookup_head_tree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_OBJECT_TREE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32*)* @checkout_lookup_head_tree to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @checkout_lookup_head_tree(i32** %0, i32* %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32** %0, i32*** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 0, i32* %5, align 4
  store i32* null, i32** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @git_repository_head(i32** %6, i32* %8)
  store i32 %9, i32* %5, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %19, label %11

11:                                               ; preds = %2
  %12 = load i32*, i32** %6, align 8
  %13 = load i32, i32* @GIT_OBJECT_TREE, align 4
  %14 = call i32 @git_reference_peel(i32** %7, i32* %12, i32 %13)
  store i32 %14, i32* %5, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %11
  %17 = load i32*, i32** %7, align 8
  %18 = load i32**, i32*** %3, align 8
  store i32* %17, i32** %18, align 8
  br label %19

19:                                               ; preds = %16, %11, %2
  %20 = load i32*, i32** %6, align 8
  %21 = call i32 @git_reference_free(i32* %20)
  %22 = load i32, i32* %5, align 4
  ret i32 %22
}

declare dso_local i32 @git_repository_head(i32**, i32*) #1

declare dso_local i32 @git_reference_peel(i32**, i32*, i32) #1

declare dso_local i32 @git_reference_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
